test/libyul/yulSyntaxTests/eof/passing_builtin_with_literal_argument_into_literal_argument.yul
{
    auxdataloadn(auxdataloadn(0))
}
// ====
// bytecodeFormat: >=EOFv1
// dialect: evm
// ----
// TypeError 9114: (6-18): Function expects direct literals as arguments.
